--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "users",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://santi1991.github.io/users",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/styles": "^4.11.4",
@@ -12,11 +13,14 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dotenv": "^0.1.3",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
